@@ -1,7 +1,6 @@
-package io.intino.alexandria.ui.displays.components.microsite;
+package io.intino.alexandria.office;
 
 import io.intino.alexandria.logger.Logger;
-import io.intino.alexandria.ui.utils.IOUtils;
 
 import java.io.IOException;
 
@@ -9,7 +8,7 @@ public abstract class MicroSiteBuilder {
 
 	public String template() {
 		try {
-			return new String(IOUtils.toByteArray(MicroSiteBuilder.class.getResourceAsStream("/MicroSiteTemplate.html")));
+			return new String(MicroSiteBuilder.class.getResourceAsStream("/MicroSiteTemplate.html").readAllBytes());
 		} catch (IOException e) {
 			Logger.error(e);
 			return "";
